// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Drawer /> should add custom classes 1`] = `
<DrawerWithStyles
  className="custom-class-name"
  isOpen={true}
>
  <Drawer
    animation={
      {
        "duration": null,
        "in": "",
        "out": "",
      }
    }
    className="custom-class-name"
    classes={
      {
        "animationIn": "tss-25le8d-Drawer-animationIn",
        "animationOut": "tss-1lx1x7x-Drawer-animationOut",
        "container": "tss-2b150r-Drawer-container",
      }
    }
    isOpen={true}
    onClose={[Function]}
    onDidClose={[Function]}
    onDidOpen={[Function]}
    onOpen={[Function]}
  >
    <div
      aria-modal={true}
      className="custom-class-name tss-2b150r-Drawer-container tss-25le8d-Drawer-animationIn common__drawer"
      onAnimationEnd={[Function]}
      role="dialog"
      style={{}}
      tabIndex={-1}
    />
  </Drawer>
</DrawerWithStyles>
`;

exports[`<Drawer /> should execute callback when drawer close animation did end 1`] = `
<DrawerWithStyles
  className="custom-class-name"
  isOpen={true}
  onClose={[MockFunction]}
  onDidClose={[MockFunction]}
>
  <Drawer
    animation={
      {
        "duration": null,
        "in": "",
        "out": "",
      }
    }
    className="custom-class-name"
    classes={
      {
        "animationIn": "tss-25le8d-Drawer-animationIn",
        "animationOut": "tss-1lx1x7x-Drawer-animationOut",
        "container": "tss-2b150r-Drawer-container",
      }
    }
    isOpen={true}
    onClose={[MockFunction]}
    onDidClose={[MockFunction]}
    onDidOpen={[Function]}
    onOpen={[Function]}
  >
    <div
      aria-modal={true}
      className="custom-class-name tss-2b150r-Drawer-container tss-25le8d-Drawer-animationIn common__drawer"
      onAnimationEnd={[Function]}
      role="dialog"
      style={{}}
      tabIndex={-1}
    />
  </Drawer>
</DrawerWithStyles>
`;

exports[`<Drawer /> should execute callback when drawer open animation did end 1`] = `
<DrawerWithStyles
  className="custom-class-name"
  isOpen={false}
  onDidOpen={[MockFunction]}
  onOpen={[MockFunction]}
>
  <Drawer
    animation={
      {
        "duration": null,
        "in": "",
        "out": "",
      }
    }
    className="custom-class-name"
    classes={
      {
        "animationIn": "tss-25le8d-Drawer-animationIn",
        "animationOut": "tss-1lx1x7x-Drawer-animationOut",
        "container": "tss-2b150r-Drawer-container",
      }
    }
    isOpen={false}
    onClose={[Function]}
    onDidClose={[Function]}
    onDidOpen={[MockFunction]}
    onOpen={[MockFunction]}
  />
</DrawerWithStyles>
`;

exports[`<Drawer /> should render 1`] = `
<Drawer
  animation={
    {
      "duration": null,
      "in": "",
      "out": "",
    }
  }
  className=""
  classes={
    {
      "animationIn": "tss-25le8d-Drawer-animationIn",
      "animationOut": "tss-1lx1x7x-Drawer-animationOut",
      "container": "tss-2b150r-Drawer-container",
    }
  }
  isOpen={false}
  onClose={[Function]}
  onDidClose={[Function]}
  onDidOpen={[Function]}
  onOpen={[Function]}
/>
`;
